Add font-display: swap to prevent invisible text

--- a/src/assets/css/tailwind.css
+++ b/src/assets/css/tailwind.css
@@ -5,7 +5,8 @@
   font-style: "normal";
   font-weight: 400;
   src: url("../fonts/NotoSans_regular.otf") format("opentype"),
-  url("../fonts/NotoSans_regular.woff") format("woff");  
+  url("../fonts/NotoSans_regular.woff") format("woff");
+  font-display: swap;
 }
 
 @font-face {
@@ -13,7 +14,8 @@
   font-style: "normal";
   font-weight: 700;
   src: url("../fonts/NotoSans_bold.otf") format("opentype"),
-  url("../fonts/NotoSans_bold.woff") format("woff");  
+  url("../fonts/NotoSans_bold.woff") format("woff");
+  font-display: swap;
 }
 
 @font-face {
@@ -21,7 +23,8 @@
   font-style: "normal";
   font-weight: 400;
   src: url("../fonts/NotoSerif_light.otf") format("opentype"),
-  url("../fonts/NotoSerif_light.woff") format("woff");  
+  url("../fonts/NotoSerif_light.woff") format("woff");
+  font-display: swap;
 }
 
 @tailwind components;
